<resources>
    <!-- App's General String Usage -->
    <string name="app_name">SRS 5.1 Media Player</string>
    <string name="app_url">http://www.9d.com.hk/</string>
    <string name="prompt_lorem">Lorem Ipsum</string>
    <string name="prompt_singleline_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="prompt_multiline_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi cursus sapien sit amet tortor bibendum, non imperdiet justo convallis. Mauris vel magna et risus lacinia facilisis in et ante. In.</string>
    <!-- Splash Activity -->
    <string name="prompt_welcome">Welcome to 9D\'s media player</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Log In</string>
    <string name="prompt_anonymous">Anonymous Visit</string>
    <!-- Main Activity -->
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_cast">Cast Media</string>
    <string name="action_play">Play Media</string>
    <string name="action_pause">Pause Media</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer closed</string>
    <!-- Media Player -->
    <string name="prompt_buffering">Buffering</string>
    <!-- PayPal Activity -->
    <string name="prompt_paypal">Purchase via PayPal</string>
    <!-- Alipay Activity -->
    <string name="prompt_alipay">Purchase via Alipay</string>
    <string name="prompt_alipay_save">Save Alipay information on this device?</string>

    <!-- UPnP -->
    <string name="device_list_empty">No Media Server to be found</string>
    <string name="folder_list_empty">No files in current media server</string>
    <string name="upnp_route_provider_service">Universal Plug and Play Provider Service</string>
    <string name="album_art">Album art goes here</string>
    <string name="route_list_empty">No devices to connect to.</string>
    <string name="route_play">Play</string>
    <string name="route_previous">Previous</string>
    <string name="route_next">Next</string>
    <string name="route_pause">Pause</string>
    <string name="route_shuffle">Shuffle</string>
    <string name="route_repeat">Repeat</string>
    <string name="playlist_empty">Playlist is currently empty.</string>
    <string name="exit_renderer">Exit renderer</string>
    <string name="select_route">Select a route to play on.</string>
</resources>
