<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/controls"
        android:layout_alignParentTop="true"
        tools:listitem="@layout/listitem_route"/>

    <TextView
        android:id="@id/android:empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:text="@string/route_list_empty"
        android:layout_centerInParent="true"
        android:gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:id="@+id/controls"
        android:visibility="gone"
        android:background="@android:color/white" >

        <!-- Progress Bar -->
        <SeekBar
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Current / Total Time -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/current_time"
                android:text="@string/prompt_lorem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/route_control_padding"
                android:gravity="start"/>

            <TextView
                android:id="@+id/total_time"
                android:text="@string/prompt_lorem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/route_control_padding"
                android:gravity="end"/>

        </LinearLayout>
        <!-- Controls -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/listPreferredItemHeight"
            android:layout_gravity="center_horizontal"
            android:weightSum="5"
            android:paddingLeft="10dip"
            android:paddingRight="10dip" >

            <ImageButton
                android:id="@+id/shuffle"
                android:src="@drawable/ic_action_shuffle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/route_shuffle"/>

            <ImageButton
                android:id="@+id/previous"
                android:src="@drawable/ic_action_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/route_previous"/>

            <ImageButton
                android:id="@+id/playpause"
                android:src="@drawable/ic_action_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/route_play" />

            <ImageButton
                android:id="@+id/next"
                android:src="@drawable/ic_action_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/route_next" />

            <ImageButton
                android:id="@+id/repeat"
                android:src="@drawable/ic_action_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/route_repeat" />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>