<?xml version="1.0" encoding="utf-8"?>
<FrameLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<TextView
	    android:layout_width="match_parent"
	   	android:layout_height="wrap_content"
	   	android:paddingLeft="@dimen/activity_horizontal_margin"
	   	android:paddingRight="@dimen/activity_horizontal_margin"
	   	android:paddingTop="@dimen/activity_vertical_margin"
	   	android:paddingBottom="@dimen/activity_vertical_margin"
	    android:maxLines="2" 
		android:id="@+id/course_title"
		android:text="@string/prompt_singleline_lorem"
		android:textSize="@dimen/course_title_text_size"
		android:textColor="@color/courseTitleText"
	   	android:background="@color/courseTitleBackground"/>
	
	<ScrollView
	    android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:paddingTop="@dimen/course_title_box_size"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:layout_marginLeft="@dimen/activity_horizontal_margin"
		android:layout_marginRight="@dimen/activity_horizontal_margin">
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
			<TextView 
			    android:id="@+id/course_body"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:scrollbars="vertical"
				android:text="@string/prompt_multiline_lorem"
			    android:textSize="@dimen/content_text_size"
			   	android:textColor="@color/Light_Gray"
			   	android:paddingTop="@dimen/activity_vertical_margin"
			    android:paddingBottom="@dimen/activity_vertical_margin"/>
		</LinearLayout>
	</ScrollView>
	<Button 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|center"
		android:id="@+id/purchase_button"
		android:text="@string/prompt_paypal"
		android:textSize="@dimen/btn_text_size"
		android:textColor="@color/Dodger_Blue"/>
</FrameLayout>