<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background"
    android:weightSum="2">
    <RelativeLayout
        android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:paddingBottom="@dimen/activity_vertical_margin"
    	android:paddingLeft="@dimen/activity_horizontal_margin"
    	android:paddingRight="@dimen/activity_horizontal_margin"
    	android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_weight="3"
        android:gravity="center">

    	<ImageView
        	android:id="@+id/splash"
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:contentDescription="@string/app_name"
        	android:src="@drawable/splash" />

    </RelativeLayout>
    <LinearLayout
		android:id="@+id/splash_entry_block"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
		android:alpha="0"
        android:layout_weight="0.1" >
        <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:gravity="center_horizontal"
        	android:weightSum="1"  >
			<LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_weight="2" />
		    <EditText
		        android:id="@+id/splash_username_entry"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.4"
		        android:background="@drawable/top_edittext_bg"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
				android:paddingTop="8dp"
		        android:paddingBottom="8dp"
		        android:textSize="18dp"
		        android:hint="@string/prompt_username"
		        android:textColor="@color/Light_Gray"     
		        android:textStyle="italic"
		        android:inputType="textPersonName" />
	    </LinearLayout>
	    <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:gravity="center_horizontal"
        	android:weightSum="1"  >
		    <LinearLayout
			    android:layout_width="match_parent"
			    android:layout_height="match_parent"
			    android:layout_weight="4" />
		    <EditText
		        android:id="@+id/splash_password_entry"
                android:hint="@string/prompt_password"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_weight="0.4"
		        android:background="@drawable/bottom_edittext_bg"
		        android:paddingLeft="@dimen/activity_horizontal_margin"
		        android:paddingRight="@dimen/activity_horizontal_margin"
		        android:paddingTop="8dp"
		        android:paddingBottom="8dp"
		        android:textSize="18dp"
		        android:textColor="@color/Light_Gray"
		        android:inputType="textPassword" 
		        android:textStyle="italic"

            />
		    </LinearLayout>
			<LinearLayout
	   	    	android:layout_width="match_parent"
	   	    	android:layout_height="match_parent"
	   	    	android:layout_marginTop="@dimen/activity_vertical_margin"
	   	    	android:orientation="horizontal"
	   	    	android:gravity="center_horizontal" >
		        <Button 
		            android:id="@+id/splash_login_btn"
		            android:text="@string/prompt_anonymous"
		            android:textColor="@color/White"
		            android:textColorHighlight="@color/Bright_Blue"
		            android:background="@drawable/log_in_button_neutral"
		            android:paddingLeft="@dimen/activity_horizontal_margin"
		            android:paddingRight="@dimen/activity_horizontal_margin"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"/>
	   	</LinearLayout>
    </LinearLayout>
</LinearLayout>